--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /****BASE STYLES****/
 body{
   font-family: 'Source Sans Pro',sans-serif;
-  color: #2b2b2b;
+  color: #white;
 }
 
 #about, #work, #contact{
