--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ nav ul li{
     display: inline-block;
 }
 nav ul li a {
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     text-decoration: none;
     font-size: 18px;
     color: #828282;
