took away a # in the bg color of the body

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /****BASE STYLES****/
 body{
   font-family: 'Source Sans Pro',sans-serif;
-  color: #white;
+  color: white;
 }
 
 #about, #work, #contact{
